--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="errorPass">Error Password</string>
     <string name="emptyShortQuestion">Should Write Question from 12 letter at less</string>
     <string name="emptyAnswer">Should Write Answer.2 answer at less</string>
+    <string name="saveQuestionAndAnswersSuccessful">Save Successful</string>
+    <string name="saveQuestionAndAnswersFailed">Save Failed</string>
 
 
     <string-array name="numberOptionAnswer">
